Finish road to the end outline

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -69,7 +69,7 @@
                   </ul>
                   <li><a href="#hoof_rock_wall">9~12F</a></li>
                   <ul>
-                    <li><a href="#waterfall_basin">Food Related (Nigiri Morph and Mixer)</a></li>
+                    <li><a href="#waterfall_basin">Food Related (Nigiri Morph + Mixer)</a></li>
                     <li><a href="#waterfall_basin">Monsters</a></li>
                     <li><a href="#waterfall_basin">Other Tips</a></li>
                   </ul>
@@ -193,25 +193,95 @@
           <p></p>
           <h3 id="shield">Shield</h3>
           <p></p>
-          <h3 id="other">Other</h3>
+          <h3 id="other">Bracelet</h3>
+          <p></p>
+          <h3 id="other">Staff</h3>
+          <p></p>
+          <h3 id="other">Scroll</h3>
+          <p></p>
+          <h3 id="other">Grass</h3>
+          <p></p>
+          <h3 id="other">Pot</h3>
+          <p></p>
+          <h2 id="important_items">Identifying Items</h2>
+          <h3 id="weapon">Weapon + Shield</h3>
+          <p></p>
+          <h3 id="other">Bracelet</h3>
+          <p></p>
+          <h3 id="other">Staff</h3>
+          <p></p>
+          <h3 id="other">Scroll</h3>
+          <p></p>
+          <h3 id="other">Grass</h3>
+          <p></p>
+          <h3 id="other">Pot</h3>
           <p></p>
           <h2 id="floor_guide">Floor Guide</h2>
-          <h3 id="waterfall_basin">01~06F</h3>
+          <h3 id="waterfall_basin">01~04F</h3>
+          <h4>Basics</h4>
           <p></p>
-          <h3 id="mountain_cave">07~12F</h3>
+          <h4>Monsters</h4>
           <p></p>
-          <h3 id="hoof_rock_wall">13F~15F</h3>
+          <h4>Cave Mamel Hunting</h4>
           <p></p>
-          <h3 id="dark_night_cavern">16F Galaha</h3>
+          <h4>Items</h4>
           <p></p>
-          <h4 id="queen_spider_stats">Galaha Squad Stats</h4>
-          <h3 id="cliff_wind_hole">17~21F</h3>
+          <h3 id="hoof_rock_wall">05~08F</h3>
           <p></p>
-          <h3 id="ancient_ruins">22~24F</h3>
+          <h4>Obtain Items w/Armordillo Pop</h4>
           <p></p>
-          <h3 id="headwater_cave">25F Boss Oni</h3>
+          <h4>Obtain Iron Arrows</h4>
           <p></p>
-          <h4 id="queen_spider_stats">Boss Oni Stats</h4>
+          <h3 id="mountain_cave">09~12F</h3>
+          <p></p>
+          <h4>Food Related (Nigiri Morph + Mixer)</h4>
+          <p></p>
+          <h4>Monsters</h4>
+          <p></p>
+          <h4>Other Tips</h4>
+          <p></p>
+          <h3 id="dark_night_cavern">13~15F</h3>
+          <p></p>
+          <h3 id="dark_night_cavern">16~21F</h3>
+          <p></p>
+          <h4 id="queen_spider_stats">Twisty Hani Hunting</h4>
+          <p></p>
+          <h3 id="cliff_wind_hole">22~29F</h3>
+          <p></p>
+          <h4 id="queen_spider_stats">Monsters (22~24F)</h4>
+          <p></p>
+          <h4 id="queen_spider_stats">Monsters (25~29F)</h4>
+          <p></p>
+          <h4 id="queen_spider_stats">Golden Interval</h4>
+          <p></p>
+          <h3 id="ancient_ruins">30~39F</h3>
+          <p></p>
+          <h4 id="queen_spider_stats">Monsters</h4>
+          <p></p>
+          <h4 id="queen_spider_stats">Preparing for the Second Half</h4>
+          <p></p>
+          <h3 id="headwater_cave">40~49F</h3>
+          <p></p>
+          <h3 id="headwater_cave">50~59F</h3>
+          <p></p>
+          <h4 id="queen_spider_stats">Monsters</h4>
+          <p></p>
+          <h4 id="queen_spider_stats">Obtaining More Items</h4>
+          <p></p>
+          <h4 id="queen_spider_stats">Mr. Drone Hunting</h4>
+          <p></p>
+          <h3 id="headwater_cave">60~69F</h3>
+          <p></p>
+          <h3 id="headwater_cave">70~85F</h3>
+          <p></p>
+          <h3 id="headwater_cave">86~99F</h3>
+          <p></p>
+          <h4 id="queen_spider_stats">86~90F</h4>
+          <p></p>
+          <h4 id="queen_spider_stats">90F+</h4>
+          <p></p>
+          <h3 id="headwater_cave">The End</h3>
+          <p></p>
           <h2 id="monsters">Monsters</h2>
           <div class="onigashima_monster_table">
             <table>
@@ -429,24 +499,11 @@
           </div>
           <h2 id="floor_guide">Golden Interval</h2>
           <p>Text</p>
-          <h3>Items</h3>
-          <h2 id="floor_guide">No Carry-in Guide</h2>
-          <p>Text</p>
-          <h3>Important Items</h3>
+          <h3>First (6~10F, Return 11F)</h3>
           <p></p>
-          <h3>01~03F</h3>
+          <h3>Second (24~29F, Return 30F)</h3>
           <p></p>
-          <h3>04~06F</h3>
-          <p></p>
-          <h3>07~12F</h3>
-          <p></p>
-          <h3>13~15F</h3>
-          <p></p>
-          <h3>16F Galaha</h3>
-          <p></p>
-          <h3>17~24F</h3>
-          <p></p>
-          <h3>25F Boss Oni</h3>
+          <h3>Third (90~95F, Return 95F)</h3>
           <p></p>
         </div>
       </div>
