Let's go ahead and call this a wiki

--- a/html/header.html
+++ b/html/header.html
@@ -1,4 +1,4 @@
 <div>
 <img src="/shiren2/image/site/koppa_eating.png" width="28" height="auto" style="vertical-align: middle;">
-<span>Shark | Shiren 2</span>
+<span>Shark | Shiren 2 Wiki</span>
 </div>
