update page titles

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Index</title>
+    <title>Shiren 2 Wiki</title>
     <meta charset="utf-8">
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
