--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Price Chart</title>
+    <title>Price Chart - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
