--- a/html/item/staff.html
+++ b/html/item/staff.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Staves</title>
+    <title>Staves - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
