--- a/html/dungeon/hidden_hole.html
+++ b/html/dungeon/hidden_hole.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Shrine's Hidden Hole</title>
+    <title>Shrine's Hidden Hole - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
