--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Road To The End</title>
+    <title>Road To The End - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
