--- a/html/dungeon/shuten_trail_easy.html
+++ b/html/dungeon/shuten_trail_easy.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Shuten Trail Easy</title>
+    <title>Shuten Trail Easy - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
