--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Shuten Trail Mid</title>
+    <title>Shuten Trail Mid - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
