--- a/html/dungeon/small_valley.html
+++ b/html/dungeon/small_valley.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Small Valley</title>
+    <title>Small Valley - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
