--- a/html/item/decoration.html
+++ b/html/item/decoration.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Decorations</title>
+    <title>Decorations - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
