--- a/html/item/pot.html
+++ b/html/item/pot.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Pots</title>
+    <title>Pots - Shiren 2 Wiki</title>
     <link rel="icon" href="/shiren2/favicon.ico">
     <meta charset="utf-8">
     <script
