update heading css, change class of weather doll monsters to item change

--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -412,7 +412,7 @@
                 <td></td>
                 <td class="monster_normal">Tiger Tosser<br>()</td>
                 <td class="monster_normal">Horse Ronin<br>()</td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td></td>
                 <td class="monster_normal">Boy Cart<br>()</td>
               </tr>
@@ -577,7 +577,7 @@
                 <td class="monster_normal">Porky<br>()</td>
                 <td class="monster_one_eyed">Chainhead<br>()</td>
                 <td class="monster_ghost">Whirlwind<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_item_change">Nigiri Boss<br>()</td>
                 <td></td>
                 <td></td>
@@ -601,7 +601,7 @@
                 <td class="monster_normal">Porky<br>()</td>
                 <td class="monster_one_eyed">Chainhead<br>()</td>
                 <td class="monster_ghost">Whirlwind<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_item_change">Nigiri Boss<br>()</td>
                 <td class="monster_normal">Evil Kangaroo<br>()</td>
                 <td class="monster_dragon">Dragon<br>()</td>
@@ -625,7 +625,7 @@
                 <td></td>
                 <td class="monster_one_eyed">Chainhead<br>()</td>
                 <td class="monster_ghost">Whirlwind<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_item_change">Nigiri Boss<br>()</td>
                 <td class="monster_normal">Evil Kangaroo<br>()</td>
                 <td class="monster_dragon">Dragon<br>()</td>
@@ -1373,7 +1373,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td></td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -1397,7 +1397,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -1421,7 +1421,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -1445,7 +1445,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -1469,7 +1469,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -1493,7 +1493,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -1517,7 +1517,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -1541,7 +1541,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -1565,7 +1565,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td></td>
               </tr>
@@ -1589,7 +1589,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td></td>
               </tr>
@@ -2603,7 +2603,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -2623,7 +2623,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -2643,7 +2643,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
@@ -2663,7 +2663,7 @@
                 <td class="monster_normal">Pako Hammer<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
               </tr>
