--- a/html/dungeon/hidden_hole.html
+++ b/html/dungeon/hidden_hole.html
@@ -354,7 +354,7 @@
                 <td class="monster_normal">Horse Ronin<br>(12)</td>
                 <td class="monster_normal">Sheep Priest<br>(12)</td>
                 <td class="monster_ghost">Gale<br>(12)</td>
-                <td class="monster_normal">Rainy Doll<br>(12)</td>
+                <td class="monster_item_change">Rainy Doll<br>(12)</td>
                 <td class="monster_item_change">Straw Voodoll<br>(12)</td>
                 <td class="monster_item_change">Nigiri Morph<br>(12)</td>
                 <td class="monster_normal">Gamagucci<br>(12)</td>
@@ -379,7 +379,7 @@
                 <td class="monster_normal">Horse Ronin<br>(12)</td>
                 <td class="monster_normal">Sheep Priest<br>(12)</td>
                 <td class="monster_ghost">Gale<br>(12)</td>
-                <td class="monster_normal">Rainy Doll<br>(12)</td>
+                <td class="monster_item_change">Rainy Doll<br>(12)</td>
                 <td class="monster_item_change">Straw Voodoll<br>(12)</td>
                 <td class="monster_item_change">Nigiri Morph<br>(12)</td>
                 <td class="monster_normal">Gamagucci<br>(12)</td>
@@ -520,7 +520,7 @@
                 <th>16</th>
                 <td class="monster_normal">Snacky<br>(3)</td>
                 <td class="monster_normal">Schubell<br>(9)</td>
-                <td class="monster_normal">Stormy Doll<br>(12)</td>
+                <td class="monster_item_change">Stormy Doll<br>(12)</td>
                 <td class="monster_ghost">Whirlwind<br>(10)</td>
                 <td></td>
                 <td></td>
@@ -545,7 +545,7 @@
                 <th>17</th>
                 <td class="monster_normal">Snacky<br>(3)</td>
                 <td class="monster_normal">Schubell<br>(9)</td>
-                <td class="monster_normal">Stormy Doll<br>(12)</td>
+                <td class="monster_item_change">Stormy Doll<br>(12)</td>
                 <td class="monster_ghost">Whirlwind<br>(10)</td>
                 <td class="monster_item_change">Gyadon<br>(12)</td>
                 <td class="monster_normal">Porky<br>(12)</td>
@@ -570,7 +570,7 @@
                 <th>18</th>
                 <td class="monster_normal">Snacky<br>(3)</td>
                 <td class="monster_normal">Schubell<br>(9)</td>
-                <td class="monster_normal">Stormy Doll<br>(12)</td>
+                <td class="monster_item_change">Stormy Doll<br>(12)</td>
                 <td class="monster_ghost">Whirlwind<br>(10)</td>
                 <td class="monster_item_change">Gyadon<br>(12)</td>
                 <td class="monster_normal">Porky<br>(12)</td>
@@ -1349,7 +1349,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td></td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td></td>
@@ -1374,7 +1374,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1399,7 +1399,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1424,7 +1424,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1449,7 +1449,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1474,7 +1474,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1499,7 +1499,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1524,7 +1524,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1549,7 +1549,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1574,7 +1574,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td></td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
