--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -341,7 +341,7 @@
                 <td class="monster_normal">Boy Cart<br>(8)</td>
                 <td class="monster_ghost">Warukichi<br>(9)</td>
                 <td class="monster_normal">N'dubba<br>(6)</td>
-                <td class="monster_normal">Rainy Doll<br>(8)</td>
+                <td class="monster_item_change">Rainy Doll<br>(8)</td>
                 <td></td>
               </tr>
               <tr>
@@ -356,7 +356,7 @@
                 <td class="monster_normal">Landmine Ninja<br>(6)</td>
                 <td class="monster_weapon">Taishodon<br>(6)</td>
                 <td class="monster_special">Mr. Helico<br>(2)</td>
-                <td class="monster_normal">Rainy Doll<br>(8)</td>
+                <td class="monster_item_change">Rainy Doll<br>(8)</td>
                 <td class="monster_one_eyed">Golem<br>(10)</td>
               </tr>
               <tr>
@@ -442,7 +442,7 @@
                 <th>17</th>
                 <td class="monster_drain">Twisty Hani<br>(10)</td>
                 <td class="monster_normal">Porky<br>(8)</td>
-                <td class="monster_normal">Stormy Doll<br>(8)</td>
+                <td class="monster_item_change">Stormy Doll<br>(8)</td>
                 <td class="monster_water">Bored Kappa<br>(8)</td>
                 <td class="monster_one_eyed">Chainhead<br>(8)</td>
                 <td class="monster_normal">Evil Kangaroo<br>(8)</td>
@@ -457,7 +457,7 @@
                 <th>18</th>
                 <td class="monster_drain">Twisty Hani<br>(10)</td>
                 <td class="monster_normal">Porky<br>(8)</td>
-                <td class="monster_normal">Stormy Doll<br>(8)</td>
+                <td class="monster_item_change">Stormy Doll<br>(8)</td>
                 <td class="monster_water">Bored Kappa<br>(8)</td>
                 <td class="monster_one_eyed">Chainhead<br>(8)</td>
                 <td class="monster_normal">Evil Kangaroo<br>(8)</td>
@@ -576,7 +576,7 @@
                 <th>1</th>
                 <td class="monster_normal">Gamagucci<br>(7)</td>
                 <td class="monster_item_change">Straw Voodoll<br>(8)</td>
-                <td class="monster_normal">Rainy Doll<br>(8)</td>
+                <td class="monster_item_change">Rainy Doll<br>(8)</td>
                 <td class="monster_normal">Summon Ninja<br>(5)</td>
                 <td class="monster_normal">Landmine Ninja<br>(5)</td>
                 <td class="monster_normal">Sheep Priest<br>(8)</td>
