--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -23,7 +23,7 @@
               <p>
                 The ultimate gameplay experience of Shiren 2.<br>
                 Most items and monsters appear in this dungeon, and<br>
-                bracelets, grass, staves, pots, and scrolls are found unidentified.
+                bracelets, grasses, staves, pots, and scrolls are found unidentified.
               </p>
               <ul>
                 <li><a href="#important_items">Important Items</a></li>
@@ -515,7 +515,7 @@
                 <td class="monster_normal">Horse Ronin<br>()</td>
                 <td class="monster_normal">Sheep Priest<br>()</td>
                 <td class="monster_ghost">Gale<br>()</td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_item_change">Straw Voodoll<br>()</td>
                 <td class="monster_item_change">Nigiri Morph<br>()</td>
                 <td class="monster_normal">Gamagucci<br>()</td>
@@ -542,7 +542,7 @@
                 <td class="monster_normal">Horse Ronin<br>()</td>
                 <td class="monster_normal">Sheep Priest<br>()</td>
                 <td class="monster_ghost">Gale<br>()</td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_item_change">Straw Voodoll<br>()</td>
                 <td class="monster_item_change">Nigiri Morph<br>()</td>
                 <td class="monster_normal">Gamagucci<br>()</td>
@@ -695,7 +695,7 @@
                 <th>16</th>
                 <td class="monster_normal">Snacky<br>()</td>
                 <td class="monster_normal">Schubell<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_ghost">Whirlwind<br>()</td>
                 <td></td>
                 <td></td>
@@ -722,7 +722,7 @@
                 <th>17</th>
                 <td class="monster_normal">Snacky<br>()</td>
                 <td class="monster_normal">Schubell<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_ghost">Whirlwind<br>()</td>
                 <td class="monster_item_change">Gyadon<br>()</td>
                 <td class="monster_normal">Porky<br>()</td>
@@ -749,7 +749,7 @@
                 <th>18</th>
                 <td class="monster_normal">Snacky<br>()</td>
                 <td class="monster_normal">Schubell<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_ghost">Whirlwind<br>()</td>
                 <td class="monster_item_change">Gyadon<br>()</td>
                 <td class="monster_normal">Porky<br>()</td>
@@ -1593,7 +1593,7 @@
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td></td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td></td>
@@ -1620,7 +1620,7 @@
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -1647,7 +1647,7 @@
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -1674,7 +1674,7 @@
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -1701,7 +1701,7 @@
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -1728,7 +1728,7 @@
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -1755,7 +1755,7 @@
                 <td class="monster_weapon">Iai<br>()</td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -1782,7 +1782,7 @@
                 <td></td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -1809,7 +1809,7 @@
                 <td></td>
                 <td class="monster_item_change">Nigiri Manager<br>()</td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -1836,7 +1836,7 @@
                 <td></td>
                 <td></td>
                 <td class="monster_normal">Trickster Mask<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_item_change">Spiked Voodoll<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
                 <td class="monster_special">Mr. Gyro<br>()</td>
@@ -3026,7 +3026,7 @@
                 <td class="monster_bomb">Pop Tank<br>()</td>
                 <td class="monster_normal">Sheep Priest<br>()</td>
                 <td class="monster_ghost">Gale<br>()</td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_item_change">Straw Voodoll<br>()</td>
                 <td class="monster_normal">Gamagucci<br>()</td>
                 <td class="monster_one_eyed">Ironhead<br>()</td>
@@ -3047,7 +3047,7 @@
                 <td class="monster_bomb">Pop Tank<br>()</td>
                 <td class="monster_normal">Sheep Priest<br>()</td>
                 <td class="monster_ghost">Gale<br>()</td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_item_change">Straw Voodoll<br>()</td>
                 <td class="monster_normal">Gamagucci<br>()</td>
                 <td class="monster_one_eyed">Ironhead<br>()</td>
