--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -17,7 +17,7 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <h2>Price Chart</h2>
+          <h2 class="page_heading">Price Chart</h2>
           <div id="item_category_links" class="item_category_links">
             <ul>
               <li><a href="#scroll_bracelet_grass">Scroll・Bracelet・Grass</a></li>
@@ -28,7 +28,7 @@
             </ul>
           </div>
           <div>
-            <h4 id="scroll_bracelet_grass">Scrolls・Bracelets・Grasses</h4>
+            <h3 id="scroll_bracelet_grass">Scrolls・Bracelets・Grasses</h3>
             <div class="price_table_div">
               <table id="price_scroll" class="price_table">
                 <td colspan="4"><img src="">Scroll</td>
@@ -393,7 +393,7 @@
             </div>
           </div>
           <div id="staff">
-            <h4>Staves</h4>
+            <h3>Staves</h3>
             <div class="price_table_div">
               <table id="price_staff" class="price_table">
                 <td colspan="10">Buy</td>
@@ -696,7 +696,7 @@
             </div>
           </div>
           <div id="pot">
-            <h4>Pots</h4>
+            <h3>Pots</h3>
             <div class="price_table_div">
               <table id="price_pot" class="price_table">
                 <td colspan="9">Buy</td>
@@ -940,7 +940,7 @@
             </div>
           </div>
           <div id="weapon">
-            <h4>Weapons</h4>
+            <h3>Weapons</h3>
             <div class="price_table_div">
               <table id="price_weapon" class="price_table">
                 <td colspan="6"><img src="">Regular Weapons</td>
@@ -1285,7 +1285,7 @@
             </div>
           </div>
           <div id="shield">
-            <h4>Shields</h4>
+            <h3>Shields</h3>
             <div class="price_table_div">
               <table id="price_shield" class="price_table">
                 <td colspan="6"><img src="">Regular Shields</td>
