--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -17,7 +17,7 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <h2>Monsters</h2>
+          <h2 class="page_heading">Monsters</h2>
           <div id="monster_quick_links" class="monster_quick_links">
             <ul>
               <li><a href="#monster_table_explanation">Table Explanation / Notes</a></li>
