--- a/html/dungeon/hidden_hole_b.html
+++ b/html/dungeon/hidden_hole_b.html
@@ -391,7 +391,7 @@
                 <td class="monster_normal">Horse Ronin<br>(12)</td>
                 <td class="monster_normal">Sheep Priest<br>(12)</td>
                 <td class="monster_ghost">Gale<br>(12)</td>
-                <td class="monster_normal">Rainy Doll<br>(12)</td>
+                <td class="monster_item_change">Rainy Doll<br>(12)</td>
                 <td class="monster_item_change">Straw Voodoll<br>(12)</td>
                 <td class="monster_item_change">Nigiri Morph<br>(12)</td>
                 <td class="monster_normal">Gamagucci<br>(12)</td>
@@ -416,7 +416,7 @@
                 <td class="monster_normal">Horse Ronin<br>(12)</td>
                 <td class="monster_normal">Sheep Priest<br>(12)</td>
                 <td class="monster_ghost">Gale<br>(12)</td>
-                <td class="monster_normal">Rainy Doll<br>(12)</td>
+                <td class="monster_item_change">Rainy Doll<br>(12)</td>
                 <td class="monster_item_change">Straw Voodoll<br>(12)</td>
                 <td class="monster_item_change">Nigiri Morph<br>(12)</td>
                 <td class="monster_normal">Gamagucci<br>(12)</td>
@@ -557,7 +557,7 @@
                 <th>16</th>
                 <td class="monster_normal">Snacky<br>(3)</td>
                 <td class="monster_normal">Schubell<br>(9)</td>
-                <td class="monster_normal">Stormy Doll<br>(12)</td>
+                <td class="monster_item_change">Stormy Doll<br>(12)</td>
                 <td class="monster_ghost">Whirlwind<br>(10)</td>
                 <td></td>
                 <td></td>
@@ -582,7 +582,7 @@
                 <th>17</th>
                 <td class="monster_normal">Snacky<br>(3)</td>
                 <td class="monster_normal">Schubell<br>(9)</td>
-                <td class="monster_normal">Stormy Doll<br>(12)</td>
+                <td class="monster_item_change">Stormy Doll<br>(12)</td>
                 <td class="monster_ghost">Whirlwind<br>(10)</td>
                 <td class="monster_item_change">Gyadon<br>(12)</td>
                 <td class="monster_normal">Porky<br>(12)</td>
@@ -607,7 +607,7 @@
                 <th>18</th>
                 <td class="monster_normal">Snacky<br>(3)</td>
                 <td class="monster_normal">Schubell<br>(9)</td>
-                <td class="monster_normal">Stormy Doll<br>(12)</td>
+                <td class="monster_item_change">Stormy Doll<br>(12)</td>
                 <td class="monster_ghost">Whirlwind<br>(10)</td>
                 <td class="monster_item_change">Gyadon<br>(12)</td>
                 <td class="monster_normal">Porky<br>(12)</td>
@@ -1386,7 +1386,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td></td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td></td>
@@ -1411,7 +1411,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1436,7 +1436,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1461,7 +1461,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1486,7 +1486,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1511,7 +1511,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1536,7 +1536,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1561,7 +1561,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1586,7 +1586,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td class="monster_item_change">Nigiri Manager<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
@@ -1611,7 +1611,7 @@
                 <td class="monster_water">Sea Dragon<br>(6)</td>
                 <td></td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
-                <td class="monster_normal">Monsoon Doll<br>(8)</td>
+                <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
                 <td class="monster_drain">Diet Puppet<br>(8)</td>
                 <td class="monster_special">Mr. Gyro<br>(3)</td>
