--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -243,7 +243,7 @@
                 <td class="monster_drain">Serious Slug<br>()</td>
                 <td class="monster_normal">Porky<br>()</td>
                 <td class="monster_water">Water Strider<br>()</td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_normal">Landmine Ninja<br>()</td>
                 <td class="monster_drain">Twisty Hani<br>()</td>
                 <td></td>
@@ -265,7 +265,7 @@
                 <td class="monster_drain">Serious Slug<br>()</td>
                 <td class="monster_normal">Porky<br>()</td>
                 <td class="monster_water">Water Strider<br>()</td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_normal">Landmine Ninja<br>()</td>
                 <td class="monster_drain">Twisty Hani<br>()</td>
                 <td class="monster_weapon">Taishodon<br>()</td>
@@ -287,7 +287,7 @@
                 <td></td>
                 <td class="monster_normal">Porky<br>()</td>
                 <td class="monster_water">Water Strider<br>()</td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_normal">Landmine Ninja<br>()</td>
                 <td class="monster_drain">Twisty Hani<br>()</td>
                 <td class="monster_weapon">Taishodon<br>()</td>
@@ -354,7 +354,7 @@
                 <td class="monster_bone">Bone Dragon<br>()</td>
                 <td class="monster_bomb">Pop Tank<br>()</td>
                 <td class="monster_one_eyed">Chainhead<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_bomb">Wolf Droid<br>()</td>
                 <td class="monster_drain">Starve Puppet<br>()</td>
                 <td class="monster_bomb">Patient Bag<br>()</td>
@@ -376,7 +376,7 @@
                 <td></td>
                 <td class="monster_bomb">Pop Tank<br>()</td>
                 <td class="monster_one_eyed">Chainhead<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_bomb">Wolf Droid<br>()</td>
                 <td class="monster_drain">Starve Puppet<br>()</td>
                 <td></td>
@@ -398,7 +398,7 @@
                 <td class="monster_weapon">Tonosamadon<br>()</td>
                 <td></td>
                 <td class="monster_one_eyed">Chainhead<br>()</td>
-                <td class="monster_normal">Stormy Doll<br>()</td>
+                <td class="monster_item_change">Stormy Doll<br>()</td>
                 <td class="monster_bomb">Wolf Droid<br>()</td>
                 <td class="monster_drain">Starve Puppet<br>()</td>
                 <td></td>
@@ -596,7 +596,7 @@
                 <td class="monster_normal">Armordillo Pop<br>()</td>
                 <td></td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_drain">Rancor Slug<br>()</td>
                 <td></td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -618,7 +618,7 @@
                 <td class="monster_normal">Armordillo Pop<br>()</td>
                 <td class="monster_drain">Demon Scorpion<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_drain">Rancor Slug<br>()</td>
                 <td></td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -640,7 +640,7 @@
                 <td></td>
                 <td class="monster_drain">Demon Scorpion<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_drain">Rancor Slug<br>()</td>
                 <td></td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -662,7 +662,7 @@
                 <td></td>
                 <td class="monster_drain">Demon Scorpion<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td></td>
                 <td></td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -684,7 +684,7 @@
                 <td></td>
                 <td class="monster_drain">Demon Scorpion<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td></td>
                 <td class="monster_normal">Bellthoven<br>()</td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -706,7 +706,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_drain">Demon Scorpion<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td></td>
                 <td class="monster_normal">Bellthoven<br>()</td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -728,7 +728,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_drain">Demon Scorpion<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td></td>
                 <td class="monster_normal">Bellthoven<br>()</td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -750,7 +750,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_drain">Demon Scorpion<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td></td>
                 <td class="monster_normal">Bellthoven<br>()</td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -772,7 +772,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td></td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td></td>
                 <td class="monster_normal">Bellthoven<br>()</td>
                 <td class="monster_bomb">Cranky Tank<br>()</td>
@@ -794,7 +794,7 @@
                 <td class="monster_normal">Devil Kangaroo<br>()</td>
                 <td class="monster_water">Water Shinryu<br>()</td>
                 <td class="monster_normal">Dosukoi<br>()</td>
-                <td class="monster_normal">Monsoon Doll<br>()</td>
+                <td class="monster_item_change">Monsoon Doll<br>()</td>
                 <td class="monster_drain">Intolerable Slug<br>()</td>
                 <td class="monster_normal">Bellthoven<br>()</td>
                 <td class="monster_drain">Diet Puppet<br>()</td>
@@ -2344,7 +2344,7 @@
                 <td></td>
                 <td class="monster_ghost">Gale<br>()</td>
                 <td></td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_normal">Boy Cart<br>()</td>
                 <td class="monster_weapon">Samuraidon<br>()</td>
                 <td></td>
@@ -2363,7 +2363,7 @@
                 <td></td>
                 <td class="monster_ghost">Gale<br>()</td>
                 <td></td>
-                <td class="monster_normal">Rainy Doll<br>()</td>
+                <td class="monster_item_change">Rainy Doll<br>()</td>
                 <td class="monster_normal">Landmine Ninja<br>()</td>
                 <td class="monster_weapon">Samuraidon<br>()</td>
                 <td class="monster_weapon">Taishodon<br>()</td>
